fix word and letter spacing

--- a/csswizardry-grids.less
+++ b/csswizardry-grids.less
@@ -41,6 +41,8 @@
     margin:0;                       /* [2] */
     padding:0;                      /* [2] */
     margin-left:-@gutter;           /* [3] */
+    word-spacing: -0.43em;
+    letter-spacing: -0.31em;
 }
 
 
@@ -53,6 +55,8 @@
     -webkit-box-sizing:border-box;
        -moz-box-sizing:border-box;
             box-sizing:border-box;
+    letter-spacing: normal;
+    word-spacing: normal;
 }
 
 /**
